sfdx-source/main/default/objects/PC_AWPushEvent__c/fields/CaseClosedByName__c.field-meta.xml
<CustomField>
    <fullName>CaseClosedByName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseClosedByName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>