sfdx-source/main/default/objects/PC_AWPushEvent__c/fields/CaseClosedJSON__c.field-meta.xml
<CustomField>
    <fullName>CaseClosedJSON__c</fullName>
    <description>Holds the JSON for cases closed in bulk.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseClosedJSON</label>
    <length>254</length>
    <type>Text</type>
</CustomField>