sfdx-source/main/default/objects/PC_AWPushEvent__c/fields/ChatDisabled__c.field-meta.xml
<CustomField>
    <fullName>ChatDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ChatDisabled</label>
    <type>Checkbox</type>
</CustomField>