sfdx-source/main/default/objects/PC_AWPushEvent__c/fields/ConsultantsOnline__c.field-meta.xml
<CustomField>
    <fullName>ConsultantsOnline__c</fullName>
    <label>ConsultantsOnline</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>