sfdx-source/main/default/objects/PC_AWPushEvent__c/fields/GeneralDisabled__c.field-meta.xml
<CustomField>
    <fullName>GeneralDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that denotes if the General PrC Case button should be active. Utilized in Push Events to set button disabled or enabled</description>
    <label>GeneralDisabled</label>
    <type>Checkbox</type>
</CustomField>