sfdx-source/main/default/objects/PC_AWPushEvent__c/fields/MinCapacity__c.field-meta.xml
<CustomField>
    <fullName>MinCapacity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MinCapacity</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>