sfdx-source/main/default/objects/PC_AWPushEvent__c/fields/NewCaseOwner__c.field-meta.xml
<CustomField>
    <fullName>NewCaseOwner__c</fullName>
    <description>Holds the new case owner if the case owner was changed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NewCaseOwner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>