sfdx-source/main/default/objects/PC_AWPushEvent__c/fields/NewOwnerCity__c.field-meta.xml
<CustomField>
    <fullName>NewOwnerCity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NewOwnerCity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>