sfdx-source/main/default/objects/PC_AWPushEvent__c/fields/NewOwnerDepartment__c.field-meta.xml
<CustomField>
    <fullName>NewOwnerDepartment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NewOwnerDepartment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>