sfdx-source/main/default/objects/PC_AWPushEvent__c/fields/NewOwnerTitle__c.field-meta.xml
<CustomField>
    <fullName>NewOwnerTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NewOwnerTitle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>