sfdx-source/main/default/objects/PC_AWPushEvent__c/fields/PhoneDisabled__c.field-meta.xml
<CustomField>
    <fullName>PhoneDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PhoneDisabled</label>
    <type>Checkbox</type>
</CustomField>