sfdx-source/main/default/objects/PC_AWPushEvent__c/fields/SkillName__c.field-meta.xml
<CustomField>
    <fullName>SkillName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SkillName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>